# F.R.I.D.A.Y

./: .gitignore  QUICK_START.md  README.md  USAGE_GUIDE.md  cleanup_temp.py  docker-compose.yml  requirements.txt  setup_ffmpeg.py  start_servers.py  test_installation.py
backend/: app.py  app_whisper_backup.py  test_edge_tts.py
backend/ffmpeg/: README.txt
frontend/: audio_test.html  index.html  script.js  styles.css
ocv/: DEVELOPMENT.md  README.md  docker-compose.yml
ocv/backend/: Cargo.toml  Dockerfile.dev
ocv/backend/src/: main.rs
ocv/backend/src/adapters/: mem0.rs  mod.rs
ocv/backend/src/api/: graphql.rs  health.rs  mod.rs  schema.rs
ocv/backend/src/consent_manager/: graphql.rs  mod.rs  models.rs  repository.rs  service.rs
ocv/backend/src/context_management/: graphql.rs  mod.rs  models.rs  repository.rs  service.rs
ocv/backend/src/encryption/: mod.rs  service.rs
ocv/backend/src/identity/: graphql.rs  mod.rs  models.rs  repository.rs  service.rs
ocv/backend/src/policy_engine/: mod.rs  service.rs
ocv/backend/src/storage/: migrations.rs  mod.rs
ocv/backend/src/utils/: errors.rs
ocv/frontend/: Dockerfile.dev  package.json
ocv/frontend/public/: index.html  manifest.json
ocv/frontend/src/: App.js  App.tsx
ocv/frontend/src/components/layout/: MainLayout.tsx
ocv/frontend/src/contexts/: AuthContext.tsx
ocv/frontend/src/pages/: AuditLogPage.tsx  ConsentRequestPage.tsx  DashboardPage.tsx  GrantsPage.tsx  LoginPage.tsx  RegisterPage.tsx
ocv/sdks/javascript/: package.json
ocv/sdks/javascript/src/: consent.ts  context.ts  identity.ts  index.ts  types.ts
ocv/travel-demo/: package.json
ocv/travel-demo/public/: index.html  manifest.json
ocv/travel-demo/src/: App.tsx  index.tsx
ocv/travel-demo/src/components/layout/: ContextBanner.tsx  MainLayout.tsx
ocv/travel-demo/src/contexts/: OcvContext.tsx
ocv/travel-demo/src/pages/: ConsentCallbackPage.tsx  HomePage.tsx  PreferencesPage.tsx
