[package]
name = "open-context-vault"
version = "0.1.0"
edition = "2021"
description = "An open-source personal data layer for AI context sharing"
repository = "https://github.com/ocv/open-context-vault"
license = "MIT"

[dependencies]
# Web framework
actix-web = "4.4.0"
actix-cors = "0.6.4"
actix-rt = "2.8.0"

# GraphQL
async-graphql = "6.0.7"
async-graphql-actix-web = "6.0.7"

# Database
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres", "json", "uuid", "time", "migrate"] }
sea-query = "0.30.0"

# Vector database
pgvector = "0.3.0"

# HTTP client for mem0
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1.74"
base64 = "0.21.4"
urlencoding = "2.1.3"

# Encryption
sodiumoxide = "0.2.7"
rand = "0.8.5"
argon2 = "0.5.0"

# Authentication
jsonwebtoken = "9.1.0"
oauth2 = "4.4.2"

# Serialization
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

# Async
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3.28"

# Logging and metrics
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-actix-web = "0.7.5"
prometheus = "0.13.3"

# Utilities
uuid = { version = "1.4.1", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
config = "0.13.3"
thiserror = "1.0.48"
anyhow = "1.0.75"

# Policy engine
opa-wasm = "0.5.0"

[dev-dependencies]
mockall = "0.11.4"
tokio-test = "0.4.3"
wiremock = "0.5.19"
test-context = "0.1.4"

[workspace]
members = [
    "migration",
]

[[bin]]
name = "ocv"
path = "src/main.rs"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"
