[package]
name = "open-context-vault"
version = "0.1.0"
edition = "2021"
description = "An open-source personal data layer for AI context sharing"
license = "MIT"

[dependencies]
# Absolute minimal dependencies
tiny_http = "0.12"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
